@@ -166,6 +166,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - pulsemanager.{cpp,h}: use name and underscore for member variables, not
       underscore and name.
     - pulsemanager.cpp: minor non-behavior changing fixes.
+    - pulsemanager.{cpp,h}: reformat only.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
